--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,70 @@
-.introduction {
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+body {
+	margin: 0;
+	padding: 0;
+	font-family: Arial, sans-serif;
+}
+.content {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+	position: relative;
+	z-index: 1;
+}
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#copyright {
+	font-size: 9px;
+	text-align: right;
+}
+
+h2 {
+	font-size: 36px;
+	margin-bottom: 20px;
+}
+
+p , li {
+	font-size: 18px;
+	line-height: 1.5;
+}
+.header {
+    font-size:30px;
+    font-family: monospace;
+    background-color: black;
+    height: 100%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 30px;
+	color: white;
+  } 
+  .alignleft {
+    float: left;
+  }
+  .alignright {
+    float: right;
+  }
+  
+  .footer {
+    width: 100%;
     background-color: black;
     color: white;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    top: 0;
+    text-align:center;
+    align-items: center;
+    height:100px;
+    padding-top: 30px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    padding-left: 30px;
+  }
+
+.img {
+	text-decoration-line: none;
+	color: white;
+	font-family: sans-serif;
 }
+
